<resources>
    <string name="app_name">App</string>
    <string name="title_activity_register_login">register_login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_season_schedule">season_schedule</string>
    <string-array name="privileges">
        <item>Admin</item>
        <item>Moderator</item>
        <item>Vendor</item>
        <item>Information Maintainer</item>
        <item>User</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_page">admin_page</string>
    <string name="title_activity_concessions">concessions</string>
    <string name="title_activity_roster_update2">roster_update2</string>
    <string name="title_activity_map">map</string>
</resources>